Made address api functional

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ header{
     padding: 8px 22px;
     background: var(--main-color);
     color: var(--bg-color);
-    border-radius: 5rem;
+    border-radius: 5px;
 }
 .button:hover{
     background: #3492fd
@@ -100,17 +100,18 @@ header{
 /* HOME */
 .home{
     margin-top: 6rem;
-    background: url(/img/hero.jpg);
+    background: url(/img/hero2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: top;
     height: 440px;
-    border-radius: 1.5rem;
+    border-radius: 5px;
     display: flex;
     align-items: center;
 }
 .home-text{
     padding-left: 35px;
+    margin-bottom: 15rem;
 }
 .home-text h1{
     color: var(--bg-color);
@@ -123,7 +124,7 @@ header{
     gap: 2rem;
 }
 .about-img img{
-    border-radius: 3rem 0 3rem 3rem;
+    border-radius: 5px;
 
 }
 .about-text span{
@@ -150,7 +151,7 @@ header{
     background: var(--bg-color);
     box-shadow: var(--box-shadow);
     text-align: center;
-    border-radius: 2rem;
+    border-radius: 5px;
 }
 .sales .box:hover{
     background: var(--main-color);
@@ -187,7 +188,7 @@ header{
 }
 .properties{
     background: #fbfbfb;
-    border-radius: 2rem;
+    border-radius: 5px;
 }
 .properties-container{
     display: grid;
@@ -198,7 +199,7 @@ header{
 .properties-container .box{
     background: var(--bg-color);
     padding: 10px;
-    border-radius: 1rem;
+    border-radius: 5px;
     box-shadow: var(--box-shadow);
 }
 .properties-container .box:hover{
@@ -206,7 +207,7 @@ header{
     transition: 0.5s;
 }
 .properties-container .box img{
-    border-radius: 1rem;
+    border-radius: 5px;
     height: 220px;
     object-fit: cover;
     object-position: center;
@@ -257,7 +258,7 @@ header{
     background: var(--bg-color);
     box-shadow: var(--box-shadow);
     padding: 6px 10px;
-    border-radius: 5rem;
+    border-radius: 5px;
 }
 .newsletter form input{
     border: none;
@@ -275,7 +276,7 @@ header{
 .footer{
     background: var(--main-color);
     color: var(--bg-color);
-    border-radius: 5rem 0 0 0;
+    border-radius: 10px 0 0 0;
 }
 .footer-container{
     display: grid;
