--- a/style.css
+++ b/style.css
@@ -385,6 +385,9 @@ header{
     section{
         padding: 4rem 0 3rem;
     }
+    .home-text{
+        padding-top: 60%;
+    }
     .properties-container{
         grid-template-columns: repeat(auto-fit,minmax(200px,auto));
         gap: 1rem;
@@ -407,12 +410,84 @@ header{
     }
     .navbar{
         position: absolute;
-        top: 0;
+        top: 100%;
         left: 0;
         right: 0;
         display: flex;
         flex-direction: column;
         background: var(--secondary-color);
         text-align: center;
+        clip-path: circle(0% at 100% 1%);
+        transition: 0.6s;
+    }
+    .navbar a{
+        display: block;
+        margin: 1rem;
+        padding: 20px;
+        color: var(--bg-color);
+    }
+    .navbar a:hover{
+        background: var(--main-color);
+        color: var(--bg-color);
+        transition: 0.2s
+    }
+    .home-text{
+        padding-top: 60%;
+    }
+    #menu:checked ~ .navbar{
+        clip-path: circle(144% at 100% 1%);
+    }
+    .about-text span{
+        font-size: 0.9rem;
+    }
+    .about-text h2, .heading h2, .newsletter h2{
+        font-size: 1.4rem
+    }
+}
+@media(max-width: 638px){
+    .about-text{
+        text-align: center;
+    }
+    .about-img{
+        order: 2;
+    }
+    .login{
+        grid-template-columns: 0.8fr 1fr;
+    }
+    .home-text{
+        padding-top: 60%;
+    }
+    .login{
+        margin-top: 3rem;
+    }
+}
+@media(max-width: 572px){
+    .login-image{
+        display: none;
+    }
+    .login{
+        justify-content: center;
+        grid-template-columns: 1fr;
+    }
+    .home-text{
+        padding-top: 80%;
+    }
+}
+@media (max-width: 442px){
+    .home-text{
+        padding-left: 14px;
+        font-size: 1.7rem;
+    }
+    .about-text h2, .heading h2, .newsletter h2{
+        font-size: 1.2rem
+    }
+    .properties-container{
+        padding: 0;
+    }
+    .newsletter #email-box {
+        width: 100px;
+    }
+    .home-text{
+        padding-top: 90%;
     }
 }
