--- a/style.css
+++ b/style.css
@@ -508,34 +508,56 @@ header{
     margin: 0 auto 0 auto;
 }
 
+.showcase-info{
+    width: 100%;
+    padding: 0 2.5rem 0 3.5rem;
+    display: flex;
+}
+
 /* PROPERTY INFO */
 
 .property-info-container{
     width: 40%;
-    margin-left: 2.3rem;
 }
 
 .info-scroll-container{
     width: 90%;
-    padding: 2rem 2.5rem;
 }
 
 .info-header{
-    width: 75%;
+    width: 100%;
     height: 20%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 1rem;
 }
 
 .info-header i{
     font-size: 25px;
 }
 
+.info-header h2{
+    font-size: 2rem;
+}
+
 .info-details{
+    padding-top: 10px;
     width: 100%;
     height: 50%;
-    font-size: 1rem;
+    font-size: 1.3rem;
+}
+.status{
+    display: flex;
+    align-items: center;
+}
+
+.dot{
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    background: var(--main-color);
+    margin-right: .5rem;
 }
 
 
@@ -545,5 +567,41 @@ header{
 /* IMAGE GALLERY */
 
 .image-gallery{
+    display: flex;
+    flex-wrap: wrap;
     width: 60%;
+    padding-top: 1rem;
+    padding-right: 0;
+    
+}
+.gallery-image{
+    background-image: url(/img/p2.jpg);
+    background-size: cover;
+    width: 48%;
+    height: 200px;
+    border-radius: 5px;
+    padding: 1rem;
+    padding-bottom: 1rem;
+    margin: .2rem;
+}
+
+/* ACTION SECTION */
+
+.action-section{
+    display: flex;
+    justify-content: space-between;
+    height: 30%;
+    padding-top: 20px;
+    width: 100%;
+}
+
+/* MAP   */
+
+.map{
+    padding-top: 1rem;
+    border-radius: 5px;
+}
+
+.map iframe{
+    border-radius: 5px;
 }
